--- a/site/MonitorSite/app/views/server_monitor/index.html.erb
+++ b/site/MonitorSite/app/views/server_monitor/index.html.erb
@@ -1,5 +1,7 @@
 <% content_for :application do %>
-<div class="widget-container widget_search styled boxed">
+	<div style="height:200px;"></div>
+	<div class="widget-container widget_search styled boxed">
+		<div style="height:100px;"></div>
 	    <div class="inner">
 	        <form method="get" id="searchform2" action="#">
 	            <div class="clearfix">
@@ -12,7 +14,8 @@
 	            </div>
 	        </form>
 	    </div>
-</div>
+		<div style="height:100px;"></div>
+	</div>
 <script type="text/javascript">
 	function connect(){
 		window.location.href = "/servermonitor/server?server=" + $("#servername").val();
