--- a/site/MonitorSite/app/views/server_monitor/server.html.erb
+++ b/site/MonitorSite/app/views/server_monitor/server.html.erb
@@ -298,15 +298,19 @@
 
 
 <div class="row"> 
-    <div class="widget-container scrollBars boxed">
-        <h3 class="widget-title">REQUEST</h3>
-        <div id="reqchartdiv" style="width: 100%; height: 200px;"></div>
+    <div class="col-sm-12">
+        <div class="widget-container scrollBars boxed">
+            <h3 class="widget-title">REQUEST</h3>
+            <div id="reqchartdiv" style="width: 100%; height: 200px;"></div>
+        </div>
     </div>
 </div>
 <div class="row"> 
-    <div class="widget-container scrollBars boxed">
-        <h3 class="widget-title">PROXY REQUEST</h3>
-        <div id="proxychartdiv" style="width: 100%; height: 200px;"></div>
+    <div class="col-sm-12">
+        <div class="widget-container scrollBars boxed">
+            <h3 class="widget-title">PROXY REQUEST</h3>
+            <div id="proxychartdiv" style="width: 100%; height: 200px;"></div>
+        </div>
     </div>
 </div>
 <script type="text/javascript">
