--- a/site/MonitorSite/app/views/layouts/application.html.erb
+++ b/site/MonitorSite/app/views/layouts/application.html.erb
@@ -15,20 +15,27 @@
 	<!-- Website Menu -->
 	<div id="topmenu">
 	    <ul class="dropdown clearfix boxed">
-	        <li class="menu-level-0"><a href="/servermonitor/index"><i class="icon-menu icon-menu2"></i><span>HOME</span></a></li>
+	        <li class="menu-level-0"><a href="/server"><i class="icon-menu icon-menu2"></i><span>HOME</span></a></li>
 	        <!--<li class="menu-level-0"><a href="#"><i class="icon-menu icon-menu2"></i><span>events</span></a> </li>-->
 	        
 	        <li class="menu-level-0"><a href="#"><i class="icon-menu icon-menu4"></i><span>settings</span><!--<sup class="note">3</sup>--></a>
 	            <ul class="submenu-1">
 	                <li class="menu-level-1"><a href="#">ESB Server</a>
 		                <ul class="submenu-2">
+		                	<li class="menu-level-2"><a href="/server">ESB Servers</a></li>
 		                	<li class="menu-level-2"><a href="/server/new">New ESB Server</a></li>
 	                	</ul>
 	                </li>
 
 	                <li class="menu-level-1"><a href="#">Services</a>
 		                <ul class="submenu-2">
+		                	<li class="menu-level-2"><a href="/service">All service</a></li>
 		                	<li class="menu-level-2"><a href="/service/new">Regist service</a></li>
+	                	</ul>
+	                </li>
+	                <li class="menu-level-1"><a href="#">Subscription</a>
+		                <ul class="submenu-2">
+		                	<li class="menu-level-2"><a href="/subscription_info">Subscription list</a></li>
 	                	</ul>
 	                </li>
 	            </ul>
