--- a/site/MonitorSite/app/views/layouts/application.html.erb
+++ b/site/MonitorSite/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MonitorSite</title>
+	<title>UOKO ESB Management</title>
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	<%= javascript_include_tag 'jquery-1.11.3.min', 'data-turbolinks-track' => true %>
 	<!-- Style CSS -->
